# ether

./: .pre-commit-config.yaml  README.md  hatch.toml  pyproject.toml  ruff.toml
.github/workflows/: coverage.yml  linting.yml  publish-to-pypi.yml  tests.yml
src/et/: __about__.py  __init__.py  fixtures.py  nget.py  service.py  utc_now.py
src/ut/: __init__.py  data.py
tests/: test_destruct.py  test_fixtures.py  test_nget.py  test_service.py  test_utc_now.py
